Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-758
when building background index, reset query optimizer stats after build instead of before build
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
1.3.4
Affects Version/s:
None
Component/s:
None
Labels:
None
Field Tab
Aha! Info
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Attachments
Activity
People
Assignee:
Aaron Staple (Inactive)
Reporter:
Aaron Staple (Inactive)
Participants:
Aaron Staple
,
auto
Votes
:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
Mar 15 2010 08:40:41 PM UTC
Updated:
Jul 12 2016 12:29:35 AM UTC
Resolved:
Mar 16 2010 03:59:43 AM UTC
PagerDuty