SERVER-758 reset query optimizer stats after building index in background